<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BA Stamp Card</string>
    <string name="title_activity_main">Shops</string>
    <string name="title_activity_stamps">Stamps</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_share">Share Images</string>
    <string name="title_activity_currency">Currency Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stamps">Collected Stamps</string>
    <string name="useStamps">USE STAMPS</string>
    <string name="GpsNotReady">GPS not ready</string>
    <string name="list_item_shop_distance">Distance</string>
    <string name="title_activity_shop_location">Shop Location</string>
    <string name="menu_stamps">Stamps</string>

    <!-- Text on statistics activity -->
    <string name="statistics_table_date">Date</string>
    <string name="statistics_table_product">Product</string>
    <string name="statistics_table_shop">Shop</string>
    <string name="statistics_table_quantity">Quantity</string>

    <!-- Text for purchase activity -->
    <string name="title_activity_purchase">Purchase</string>
    <string name="register_purchase">Register purchase</string>
    <string name="scan_code">Scan code</string>
    <string name="confirm_purchase">Confirm purchase</string>
    <string name="purchase_confirmed">Purchase confirmed</string>
    <string name="confirmcode_not_ok">Purchase not confirmed</string>
    <string name="total_price">Price total</string>
    <string name="stamps_value">Stamps value</string>
    <string name="new_stamps">New stamps</string>
    <string name="your_price">Your pris</string>

</resources>
