<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dk.ba.bastampcard.activities.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1000"
        android:showAsAction="never" />
    <item android:id="@+id/action_stamps"
        android:title="@string/menu_stamps"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_statistics"
        android:title="@string/title_activity_statistics"
        android:orderInCategory="103"
        android:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_weather"
        android:title="@string/title_activity_weather"
        android:orderInCategory="102"
        android:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_share"
        android:title="@string/title_activity_share"
        android:orderInCategory="104"
        android:showAsAction="never"/>

</menu>
