<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dk.ba.bastampcard.activities.PurchaseActivity">

    <TextView
        android:text="@string/register_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:paddingBottom="25dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="2"
            android:id="@+id/btnScanCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_code"
            android:onClick="onClickScanCode"/>
        <Button
            android:layout_weight="2"
            android:id="@+id/btnConfirmPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_purchase"
            android:onClick="onClickConfirmPurchase"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/btnUseStamps"
            android:text="@string/useStamps"
            android:textColor="#db4040"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:onClick="onClickUseStamps"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/purchase_list"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            </LinearLayout>
    </ScrollView>

</LinearLayout>
