<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table_statistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView android:id="@+id/statistics_cell_date"
                android:text="@string/statistics_table_date"
                android:textSize="@dimen/statistics_header"
                android:layout_width="30dp"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView android:id="@+id/statistics_cell_shop"
                android:text="@string/statistics_table_shop"
                android:textSize="@dimen/statistics_header"
                android:layout_width="70dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView android:id="@+id/statistics_cell_product"
                android:text="@string/statistics_table_product"
                android:textSize="@dimen/statistics_header"
                android:layout_width="50dp"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center"/>

        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/scroll_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>



</LinearLayout>